# coinfox

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bias_review.yml  bug_report.yml  config.yml  data_source_request.yml  feature_request.yml  new_source.yml
.github/workflows/: ci.yml  community-guard.yml  issue-triage.yml
docs/: EPV_Ecosystem_Ownership_Map.md  Overlap_Risk_Register.md  PERFECTION_ROLLOUT.md  advanced_ai_roadmap.md  api.md  bias_output_contract.md  chainlink_price_check.md  cli_explainability.md  coinfox_project_card.md  ecosystem_risk_tiers.md  feedback_learning.md  mobile_read_contract.md  model_contributor_guide.md  plain_english_guide.md  pulse_watchdog.md  social_permalink_plan.md  source_contributor_guide.md  source_health.md  terms.md  thesis_invalidation.md
mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/: authConfig.ts  env.d.ts  links.ts  resources.ts  terms.ts  theme.ts  types.ts
scripts/: resolve_calls.py  seed_demo.py
src/coinfox/: __init__.py  __main__.py  api.py  attribution.py  bias.py  credits.py  dashboard.py  (+6 more)
tests/: test_api.py  test_bias_and_guard.py  test_bias_contract.py  test_chainlink.py  test_core.py  test_exchange_api.py  test_feedback.py  test_feedback_api.py  test_json_utils.py  test_namegen.py  test_regime.py  test_replay.py  test_social_api.py  test_terms_contract.py
(+56 files in other folders)
