[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinfox"
version = "0.2.0"
description = "Free, keyless market intelligence from Eastern Pine Intelligence."
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
]

[project.scripts]
coinfox = "coinfox.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coinfox = ["assets/*.json"]
